--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,10 @@ jobs:
         - "npm install"
         - "npm run build"
         - "npm start"
-
+deploy:
+  provider: releases
+  api_key: "GITHUB OAUTH TOKEN"
+  file: "FILE TO UPLOAD"
+  skip_cleanup: true
+  on:
+    tags: true        
